content/networking/network-policy/simpson-demo/deployment/bouvier/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    openshift.io/description: "Home of Selma & Petty Bouvier"
    openshift.io/display-name: "Bouvier"
  name: bouvier
spec: {}
