content/networking/network-policy/simpson-demo/deployment/bouvier/selma-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: selma
    app.kubernetes.io/component: selma
    app.kubernetes.io/instance: selma
    app.kubernetes.io/name: selma
    app.kubernetes.io/part-of: selma
    app.openshift.io/runtime: redhat
  name: selma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: selma
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: selma
        deployment: selma
    spec:
      containers:
      - image: quay.io/openshift-examples/simple-http-server:micro
        imagePullPolicy: IfNotPresent
        name: http-server
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
